# fiber-wallet

./: .gitignore  README.md  package-lock.json  package.json
apps/desktop/: index.html  package.json  vite.config.ts
apps/desktop/src/: App.tsx  main.tsx  styles.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: main.rs
apps/desktop/src/components/: MetricCard.tsx
apps/desktop/src/lib/: allowedRpcMethods.ts  (+25 more)
docs/: config-schema.md  current-status.md  phase-1-writeup.md  project-plan.md  rpc-method-map.md  rpc-permission-map.md
docs/gap-checks/: advanced-invoice-fields.md  backend-rpc-safety-slice.md  bip39-encrypted-recovery.md  biscuit-auth-foundation.md  channel-accept-update-foundation.md  ckb-fee-version-readiness.md  ckb-indexer-readiness.md  ckb-rpc-health.md  diagnostics-enrichment.md  external-signer-foundation.md  fiberconnect-mobile-pairing.md  graph-diagnostics-foundation.md  invoice-payment-foundation.md  local-node-manager-foundation.md  mainnet-safety-gate.md  manual-route-payment-foundation.md  milestone-0.md  milestone-1.md  payment-failure-states.md  payment-timeline-foundation.md  peers-channels-foundation.md  profile-health-slice.md  raw-console-param-validation.md  raw-console-slice.md  raw-console-write-confirmations.md  rpc-connectivity-slice.md  wallet-action-confirmations.md  wallet-key-foundation.md  write-confirmation-guardrails.md
docs/references/: manifest.md
scripts/: ckb-health-smoke.mjs  fiber-rpc-smoke.mjs  generate-milestone-0-docs.mjs
(+14 files in other folders)
