[package]
name = "fiber-wallet-desktop"
version = "0.1.0"
description = "Desktop wallet and control panel for Fiber Network Node"
authors = ["Fiber Wallet Contributors"]
license = "MIT"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
